[package]
name = "aframe"
version = "0.1.11"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
High-level Aframe VR bindings for Rust WASM
"""
keywords = ["vr", "aframe", "wasm", "web"]
homepage = "https://github.com/Eolu/aframe-rs"
repository = "https://github.com/Eolu/aframe-rs"
categories = ["api-bindings", "wasm", "graphics", "multimedia"]
documentation = "https://docs.rs/aframe-rs"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
yew-support = ["yew", "web-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
yew = { version = "0.18", optional = true }
web-sys = { version = "0.3", optional = true }