[package]
name = "aframe"
version = "0.2.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
High-level Aframe VR bindings for Rust WASM
"""
keywords = ["vr", "aframe", "wasm", "web"]
homepage = "https://github.com/Eolu/aframe-rs"
repository = "https://github.com/Eolu/aframe-rs"
categories = ["api-bindings", "wasm", "graphics", "multimedia"]
documentation = "https://docs.rs/aframe"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
yew-support = ["yew", "web-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
yew = { version = "0.18", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element"] }
wasm-bindgen-test = "0.3"
async-lock = "2.4"
futures = "0.3"