[package]
name = "aframe"
version = "0.7.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
High-level Aframe VR bindings for Rust WASM
"""
keywords = ["vr", "aframe", "wasm", "web"]
homepage = "https://github.com/Eolu/aframe-rs"
repository = "https://github.com/Eolu/aframe-rs"
categories = ["api-bindings", "wasm", "graphics", "multimedia"]
documentation = "https://docs.rs/aframe"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
init = ["async-lock", "futures"]
yew-support = ["yew"]

[dependencies]
htmlify = {version = "1.3.1", features = ["web-sys", "yew"]}
const-default = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
# init dependencies
async-lock = { version = "3.4", optional = true }
futures = { version = "0.3", optional = true }
# yew-support dependencies
yew = { version = "0.21", optional = true }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
aframe = { path = ".", features = ["init", "yew-support"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element", "HtmlHeadElement"] }
wasm-bindgen-test = "0.3"
async-lock = "2.4"
futures = "0.3"

[package.metadata.docs.rs]
all-features = true
